--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .grid-item {
-    background-color: #4CAF50;
+    background-color: #000000;
     width: 25%;
     height: 25%;
     box-sizing: border-box;
