--- a/style.css
+++ b/style.css
@@ -11,4 +11,9 @@
     height: 25%;
     box-sizing: border-box;
     border: 1px solid #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: bold;
 }
