--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+.display {
+    background-color: #D3D3D3;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    width: 400px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+}
+
 .grid-container {
     display: flex;
     flex-wrap: wrap;
@@ -16,4 +29,5 @@
     justify-content: center;
     color: white;
     font-weight: bold;
+    font-size: 20px;
 }
