--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 50px;
+    font-size: 3vmin;
 }
 
 .grid-container {
